# Transformers

./: LICENSE  README.md  model_utils_and_training.ipynb  model_utils_and_training_drive.ipynb
data/raw/: tiny_shakespeare.txt:Zone.Identifier
model/: main.py  pyproject.toml  transformer.py  transformer_config.json
model/modules/: Decoder.py  MultiHeadAttention.py
model/src/modules/: decoder.py  multiHeadAttention.py
model/src/training/: train.py
model/src/training/utils/: CustomDataset.py  run_n_epochs.py  train_loop.py
model/src/utils/visualisation/: positionalEncodingViz.py
model/training/: training.py
notes/: 20240623114729-transformers.html  20240623114729-transformers.md
training/: training.py
training/utils/: train_loop.py
transformers/: decoder_summary.txt  main.py  pyproject.toml
transformers/src/transformers/blocks/: addAndNorm.py  decoder.py  embedding.py  multiHeadAttention.py  positionalEncoding.py  scaledDotProductAttention.py
transformers/src/transformers/inference/: inference.py
transformers/src/transformers/training/: CustomDataset.py  TrainingModels.py  chunking.py  runNEpochs.py  runOneEpoch.py  run_n_epochs.py  train.py  train_loop.py  utils.py
transformers/src/transformers/visualisation/: positionalEncodingViz.py
transformers/test/transformers/blocks/: test_positionalEncoding.py
utils/: PositionalEncoding.py  addAndNorm.py
