[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "gnureadline>=8.2.13",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "mlflow>=3.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "torchinfo>=1.8.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20



